// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`json formatter should format data with > 1 data rows correctly 1`] = `
Array [
  Array [
    "Name",
    "Customer",
  ],
  Array [
    "test-project-json-1",
    "test-customer-json-1",
  ],
  Array [
    "test-project-json-2",
    "test-customer-json-2",
  ],
]
`;

exports[`json formatter should format data with 0 data rows correctly 1`] = `
Array [
  Array [
    "Name",
    "Customer",
  ],
]
`;

exports[`json formatter should format data with 1 data row correctly 1`] = `
Array [
  Array [
    "Name",
    "Customer",
  ],
  Array [
    "test-project-json-1",
    "test-customer-json-1",
  ],
]
`;
